--- a/VFD_Driver.ioc
+++ b/VFD_Driver.ioc
@@ -2,9 +2,10 @@
 Mcu.Family=STM32F1
 ProjectManager.MainLocation=Core/Src
 RCC.MCOFreq_Value=48000000
+FREERTOS.Queues01=qUSB_rcv,64,uint8_t,0,Dynamic,NULL,NULL
 USB_DEVICE.CLASS_NAME_FS=CDC
 ProjectManager.ProjectFileName=VFD_Driver.ioc
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LEDheartbeat,8,128,StartLEDheartbeat,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LEDheartbeat,8,128,StartLEDheartbeat,Default,NULL,Dynamic,NULL,NULL;taskUSB_rcv,8,128,StartUSB_rcv,Default,NULL,Dynamic,NULL,NULL
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F103C8Tx
@@ -59,7 +60,7 @@ PC13-TAMPER-RTC.Locked=true
 Mcu.Pin8=VP_FREERTOS_VS_CMSIS_V2
 RCC.USBFreq_Value=48000000
 Mcu.Pin9=VP_SYS_VS_tim1
-FREERTOS.IPParameters=Tasks01,FootprintOK
+FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01
 RCC.AHBFreq_Value=48000000
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
