--- a/VFD_Driver.ioc
+++ b/VFD_Driver.ioc
@@ -4,47 +4,25 @@ ProjectManager.MainLocation=Core/Src
 RCC.MCOFreq_Value=48000000
 FREERTOS.Queues01=qUSB_rcv,64,uint8_t,0,Dynamic,NULL,NULL;qRTT,32,uint32_t,0,Dynamic,NULL,NULL;qdebugRTT,16,uint8_t,0,Dynamic,NULL,NULL
 USB_DEVICE.CLASS_NAME_FS=CDC
-ProjectManager.ProjectFileName=VFD_Driver.ioc
 SPI2.VirtualNSS=VM_NSSHARD
 USART2.IPParameters=VirtualMode,BaudRate
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LEDheartbeat,8,128,StartLEDheartbeat,Default,NULL,Dynamic,NULL,NULL;taskUSB_rcv,8,256,StartUSB_rcv,Default,NULL,Dynamic,NULL,NULL;SeggerRTT,8,128,StartSeggerRTT,Default,NULL,Dynamic,NULL,NULL;UARTtask,8,256,StartUARTtask,Default,NULL,Dynamic,NULL,NULL;debugRTT,8,128,StartdebugRTT,Default,NULL,Dynamic,NULL,NULL
-PD1-OSC_OUT.Mode=HSE-External-Oscillator
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F103C8Tx
-PA15.GPIOParameters=GPIO_Label
-Mcu.PinsNb=19
 SPI2.VirtualType=VM_MASTER
-ProjectManager.NoMain=false
-USB_DEVICE.VirtualModeFS=Cdc_FS
-NVIC.SavedSvcallIrqHandlerGenerated=true
 RCC.PLLCLKFreq_Value=48000000
 PC13-TAMPER-RTC.GPIOParameters=PinState,GPIO_Label
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true
-PC13-TAMPER-RTC.Signal=GPIO_Output
 PA11.Mode=Device
-SH.GPXTI0.ConfNb=1
 RCC.ADCFreqValue=24000000
-ProjectManager.DefaultFWLocation=true
 NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-PD0-OSC_IN.Signal=RCC_OSC_IN
-ProjectManager.DeletePrevious=true
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
 PB13.Signal=SPI2_SCK
 PB15.Signal=SPI2_MOSI
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,PRODUCT_STRING_CDC_FS
-NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-USART2.BaudRate=9600
 PinOutPanel.RotationAngle=0
-RCC.FamilyName=M
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
 PB5.GPIOParameters=GPIO_Label
-PA0-WKUP.Signal=GPXTI0
-PA0-WKUP.Locked=true
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
-PA13.Signal=SYS_JTMS-SWDIO
-PA3.Mode=Asynchronous
 Mcu.IP4=SYS
 RCC.FCLKCortexFreq_Value=48000000
 Mcu.IP5=USART2
@@ -54,25 +32,16 @@ Mcu.IP3=SPI2
 PA15.GPIO_Label=USB_PU
 Mcu.IP0=FREERTOS
 Mcu.IP1=NVIC
-PA15.Locked=true
 PA12.Signal=USB_DP
 Mcu.UserConstants=
-ProjectManager.TargetToolchain=STM32CubeIDE
-USB_DEVICE.PRODUCT_STRING_CDC_FS=VFD Driver
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=48000000
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 Mcu.IPNb=8
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=48000000
-PB5.Locked=true
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRatePrescaler
 Mcu.Pin6=PB12
 Mcu.Pin7=PB13
-ProjectManager.RegisterCallBack=
 Mcu.Pin8=PB14
-PC13-TAMPER-RTC.Locked=true
-RCC.USBFreq_Value=48000000
 Mcu.Pin9=PB15
 FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configTOTAL_HEAP_SIZE
 RCC.AHBFreq_Value=48000000
@@ -80,100 +49,149 @@ SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
 GPIO.groupedBy=Group By Peripherals
-PD0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA2
-PB14.Signal=SPI2_MISO
 Mcu.Pin5=PA3
 ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-board=custom
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
-ProjectManager.LastFirmware=true
-PC13-TAMPER-RTC.GPIO_Label=LED
 RCC.PLLMUL=RCC_PLL_MUL6
-PB15.Mode=Full_Duplex_Master
-RCC.VCOOutput2Freq_Value=8000000
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.4
 MxDb.Version=DB.6.0.20
-NVIC.SavedSystickIrqHandlerGenerated=true
-RCC.APB2Freq_Value=48000000
 ProjectManager.BackupPrevious=true
-MxCube.Version=6.2.0
 PC13-TAMPER-RTC.PinState=GPIO_PIN_SET
-VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 PA14.Mode=Serial_Wire
 PB14.Mode=Full_Duplex_Master
 VP_SYS_VS_tim1.Mode=TIM1
-NVIC.USB_LP_CAN1_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 File.Version=6
 SPI2.CalculateBaudRate=6.0 MBits/s
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PB7.Signal=GPIO_Input
+PB8.Locked=true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
+ProjectManager.HalAssertFull=false
+FREERTOS.configTOTAL_HEAP_SIZE=8192
+ProjectManager.ProjectName=VFD_Driver
+RCC.PLLMCOFreq_Value=24000000
+PB7.GPIO_Label=enc_s
+Mcu.Package=LQFP48
+PB9.Signal=GPIO_Input
+PB12.Mode=NSS_Signal_Hard_Output
+NVIC.TimeBase=TIM1_UP_IRQn
+SPI2.Mode=SPI_MODE_MASTER
+USART2.VirtualMode=VM_ASYNC
+ProjectManager.ToolChainLocation=
+SH.GPXTI0.0=GPIO_EXTI0
+NVIC.TimeBaseIP=TIM1
+PB9.GPIO_PuPd=GPIO_PULLUP
+FREERTOS.FootprintOK=false
+PA15.Signal=GPIO_Output
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
+PB5.GPIO_Label=HV_EN
+RCC.APB1TimFreq_Value=48000000
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+SPI2.Direction=SPI_DIRECTION_2LINES
+PB13.Mode=Full_Duplex_Master
+ProjectManager.CustomerFirmwarePackage=
+PA3.Signal=USART2_RX
+PB7.GPIO_PuPd=GPIO_PULLUP
+ProjectManager.ProjectFileName=VFD_Driver.ioc
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LEDheartbeat,8,128,StartLEDheartbeat,Default,NULL,Dynamic,NULL,NULL;taskUSB_rcv,8,256,StartUSB_rcv,Default,NULL,Dynamic,NULL,NULL;SeggerRTT,8,128,StartSeggerRTT,Default,NULL,Dynamic,NULL,NULL;UARTtask,8,256,StartUARTtask,Default,NULL,Dynamic,NULL,NULL;debugRTT,8,128,StartdebugRTT,Default,NULL,Dynamic,NULL,NULL
+PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD1-OSC_OUT.Mode=HSE-External-Oscillator
+PB9.GPIO_Label=enc_b
+PA15.GPIOParameters=GPIO_Label
+Mcu.PinsNb=22
+ProjectManager.NoMain=false
+USB_DEVICE.VirtualModeFS=Cdc_FS
+NVIC.SavedSvcallIrqHandlerGenerated=true
+PB8.GPIO_PuPd=GPIO_PULLUP
+PC13-TAMPER-RTC.Signal=GPIO_Output
+SH.GPXTI0.ConfNb=1
+ProjectManager.DefaultFWLocation=true
+PD0-OSC_IN.Signal=RCC_OSC_IN
+ProjectManager.DeletePrevious=true
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,PRODUCT_STRING_CDC_FS
+NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+USART2.BaudRate=9600
+RCC.FamilyName=M
+PA0-WKUP.Signal=GPXTI0
+PA0-WKUP.Locked=true
+PB9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA13.Signal=SYS_JTMS-SWDIO
+PA3.Mode=Asynchronous
+PB8.GPIO_Label=enc_a
+PA15.Locked=true
+ProjectManager.TargetToolchain=STM32CubeIDE
+USB_DEVICE.PRODUCT_STRING_CDC_FS=VFD Driver
+PB7.GPIOParameters=GPIO_PuPd,GPIO_Label
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+PB5.Locked=true
+PB9.Locked=true
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRatePrescaler
+ProjectManager.RegisterCallBack=
+PC13-TAMPER-RTC.Locked=true
+RCC.USBFreq_Value=48000000
+PD0-OSC_IN.Mode=HSE-External-Oscillator
+PB14.Signal=SPI2_MISO
+board=custom
+ProjectManager.LastFirmware=true
+PC13-TAMPER-RTC.GPIO_Label=LED
+PB15.Mode=Full_Duplex_Master
+RCC.VCOOutput2Freq_Value=8000000
+NVIC.SavedSystickIrqHandlerGenerated=true
+RCC.APB2Freq_Value=48000000
+MxCube.Version=6.2.0
+VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+NVIC.USB_LP_CAN1_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103C(8-B)Tx
-ProjectManager.HalAssertFull=false
-FREERTOS.configTOTAL_HEAP_SIZE=8192
 NVIC.SavedPendsvIrqHandlerGenerated=true
 PA2.Signal=USART2_TX
-ProjectManager.ProjectName=VFD_Driver
 ProjectManager.UnderRoot=true
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 Mcu.IP6=USB
-RCC.PLLMCOFreq_Value=24000000
 Mcu.IP7=USB_DEVICE
 ProjectManager.CoupleFile=true
-NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:false\:true\:true
 RCC.SYSCLKFreq_VALUE=48000000
-Mcu.Package=LQFP48
 PB5.Signal=GPIO_Output
 RCC.TimSysFreq_Value=48000000
-PB12.Mode=NSS_Signal_Hard_Output
-NVIC.TimeBase=TIM1_UP_IRQn
-SPI2.Mode=SPI_MODE_MASTER
+Mcu.Pin20=VP_SYS_VS_tim1
+Mcu.Pin21=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 PA12.Mode=Device
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
-USART2.VirtualMode=VM_ASYNC
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 ProjectManager.CompilerOptimize=6
-ProjectManager.ToolChainLocation=
 PA11.Signal=USB_DM
-SH.GPXTI0.0=GPIO_EXTI0
-NVIC.TimeBaseIP=TIM1
 PA14.Signal=SYS_JTCK-SWCLK
-FREERTOS.FootprintOK=false
-PA15.Signal=GPIO_Output
 ProjectManager.HeapSize=0x200
 Mcu.Pin15=PB5
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V2
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin16=PB7
 Mcu.Pin13=PA14
 Mcu.Pin14=PA15
+Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V2
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=VP_SYS_VS_tim1
-Mcu.Pin18=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin17=PB8
+Mcu.Pin18=PB9
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=PA12
 Mcu.Pin12=PA13
-PB5.GPIO_Label=HV_EN
 Mcu.Pin10=PA11
-RCC.APB1TimFreq_Value=48000000
+PB7.Locked=true
 PA2.Mode=Asynchronous
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-SPI2.Direction=SPI_DIRECTION_2LINES
-PB13.Mode=Full_Duplex_Master
+PB8.Signal=GPIO_Input
 RCC.APB1Freq_Value=24000000
 USB_DEVICE.VirtualMode=Cdc
-ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DeviceId=STM32F103C8Tx
 PB12.Signal=SPI2_NSS
 ProjectManager.LibraryCopy=1
-PA3.Signal=USART2_RX
 isbadioc=false
