changed freq for 16MHz oscillator

--- a/VFD_Driver.ioc
+++ b/VFD_Driver.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F1
 ProjectManager.MainLocation=Core/Src
-RCC.MCOFreq_Value=48000000
+RCC.MCOFreq_Value=72000000
 FREERTOS.Queues01=qUSB_rcv,64,uint8_t,0,Dynamic,NULL,NULL;qRTT,32,uint32_t,0,Dynamic,NULL,NULL;qdebugRTT,16,uint8_t,0,Dynamic,NULL,NULL
 USB_DEVICE.CLASS_NAME_FS=CDC
 SPI2.VirtualNSS=VM_NSSHARD
@@ -9,11 +9,11 @@ USART2.IPParameters=VirtualMode,BaudRate
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F103C8Tx
 SPI2.VirtualType=VM_MASTER
-RCC.PLLCLKFreq_Value=48000000
+RCC.PLLCLKFreq_Value=72000000
 PC13-TAMPER-RTC.GPIOParameters=PinState,GPIO_Label
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true
 PA11.Mode=Device
-RCC.ADCFreqValue=24000000
+RCC.ADCFreqValue=36000000
 NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 PB13.Signal=SPI2_SCK
 PB15.Signal=SPI2_MOSI
@@ -24,7 +24,7 @@ PB5.GPIOParameters=GPIO_Label
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
 Mcu.IP4=SYS
-RCC.FCLKCortexFreq_Value=48000000
+RCC.FCLKCortexFreq_Value=72000000
 Mcu.IP5=USART2
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 Mcu.IP2=RCC
@@ -35,16 +35,16 @@ Mcu.IP1=NVIC
 PA12.Signal=USB_DP
 Mcu.UserConstants=
 Mcu.ThirdPartyNb=0
-RCC.HCLKFreq_Value=48000000
+RCC.HCLKFreq_Value=72000000
 Mcu.IPNb=8
 ProjectManager.PreviousToolchain=
-RCC.APB2TimFreq_Value=48000000
+RCC.APB2TimFreq_Value=72000000
 Mcu.Pin6=PB12
 Mcu.Pin7=PB13
 Mcu.Pin8=PB14
 Mcu.Pin9=PB15
 FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configTOTAL_HEAP_SIZE
-RCC.AHBFreq_Value=48000000
+RCC.AHBFreq_Value=72000000
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
@@ -54,10 +54,11 @@ Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 ProjectManager.ProjectBuild=false
+RCC.HSE_VALUE=16000000
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
-RCC.PLLMUL=RCC_PLL_MUL6
+RCC.PLLMUL=RCC_PLL_MUL9
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.4
 MxDb.Version=DB.6.0.20
 ProjectManager.BackupPrevious=true
@@ -66,14 +67,14 @@ PA14.Mode=Serial_Wire
 PB14.Mode=Full_Duplex_Master
 VP_SYS_VS_tim1.Mode=TIM1
 File.Version=6
-SPI2.CalculateBaudRate=6.0 MBits/s
+SPI2.CalculateBaudRate=9.0 MBits/s
 PB7.Signal=GPIO_Input
 PB8.Locked=true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 ProjectManager.HalAssertFull=false
 FREERTOS.configTOTAL_HEAP_SIZE=8192
 ProjectManager.ProjectName=VFD_Driver
-RCC.PLLMCOFreq_Value=24000000
+RCC.PLLMCOFreq_Value=36000000
 PB7.GPIO_Label=enc_s
 Mcu.Package=LQFP48
 PB9.Signal=GPIO_Input
@@ -89,7 +90,7 @@ FREERTOS.FootprintOK=false
 PA15.Signal=GPIO_Output
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 PB5.GPIO_Label=HV_EN
-RCC.APB1TimFreq_Value=48000000
+RCC.APB1TimFreq_Value=72000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 SPI2.Direction=SPI_DIRECTION_2LINES
 PB13.Mode=Full_Duplex_Master
@@ -108,6 +109,7 @@ USB_DEVICE.VirtualModeFS=Cdc_FS
 NVIC.SavedSvcallIrqHandlerGenerated=true
 PB8.GPIO_PuPd=GPIO_PULLUP
 PC13-TAMPER-RTC.Signal=GPIO_Output
+RCC.USBPrescaler=RCC_USBCLKSOURCE_PLL_DIV1_5
 SH.GPXTI0.ConfNb=1
 ProjectManager.DefaultFWLocation=true
 PD0-OSC_IN.Signal=RCC_OSC_IN
@@ -142,14 +144,14 @@ PC13-TAMPER-RTC.GPIO_Label=LED
 PB15.Mode=Full_Duplex_Master
 RCC.VCOOutput2Freq_Value=8000000
 NVIC.SavedSystickIrqHandlerGenerated=true
-RCC.APB2Freq_Value=48000000
+RCC.APB2Freq_Value=72000000
 MxCube.Version=6.2.0
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEDivPLL,HSE_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,USBPrescaler,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103C(8-B)Tx
 NVIC.SavedPendsvIrqHandlerGenerated=true
@@ -160,14 +162,15 @@ Mcu.IP6=USB
 Mcu.IP7=USB_DEVICE
 ProjectManager.CoupleFile=true
 NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:false\:true\:true
-RCC.SYSCLKFreq_VALUE=48000000
+RCC.SYSCLKFreq_VALUE=72000000
 PB5.Signal=GPIO_Output
-RCC.TimSysFreq_Value=48000000
+RCC.TimSysFreq_Value=72000000
 Mcu.Pin20=VP_SYS_VS_tim1
 Mcu.Pin21=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 PA12.Mode=Device
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
+RCC.HSEDivPLL=RCC_HSE_PREDIV_DIV2
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 ProjectManager.CompilerOptimize=6
 PA11.Signal=USB_DM
@@ -189,7 +192,7 @@ Mcu.Pin10=PA11
 PB7.Locked=true
 PA2.Mode=Asynchronous
 PB8.Signal=GPIO_Input
-RCC.APB1Freq_Value=24000000
+RCC.APB1Freq_Value=36000000
 USB_DEVICE.VirtualMode=Cdc
 ProjectManager.DeviceId=STM32F103C8Tx
 PB12.Signal=SPI2_NSS
