--- a/VFD_Driver.ioc
+++ b/VFD_Driver.ioc
@@ -2,7 +2,7 @@
 Mcu.Family=STM32F1
 ProjectManager.MainLocation=Core/Src
 RCC.MCOFreq_Value=72000000
-FREERTOS.Queues01=qUSB_rcv,64,uint8_t,0,Dynamic,NULL,NULL;qRTT,32,uint32_t,0,Dynamic,NULL,NULL;qdebugRTT,16,uint8_t,0,Dynamic,NULL,NULL
+FREERTOS.Queues01=qUSB_rcv,64,uint8_t,0,Dynamic,NULL,NULL
 USB_DEVICE.CLASS_NAME_FS=CDC
 SPI2.VirtualNSS=VM_NSSHARD
 USART2.IPParameters=VirtualMode,BaudRate
@@ -43,7 +43,7 @@ Mcu.Pin6=PB12
 Mcu.Pin7=PB13
 Mcu.Pin8=PB14
 Mcu.Pin9=PB15
-FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configTOTAL_HEAP_SIZE
+FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configTOTAL_HEAP_SIZE,INCLUDE_vTaskPrioritySet,INCLUDE_uxTaskPriorityGet
 RCC.AHBFreq_Value=72000000
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -72,7 +72,7 @@ PB7.Signal=GPIO_Input
 PB8.Locked=true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 ProjectManager.HalAssertFull=false
-FREERTOS.configTOTAL_HEAP_SIZE=8192
+FREERTOS.configTOTAL_HEAP_SIZE=4096
 ProjectManager.ProjectName=VFD_Driver
 RCC.PLLMCOFreq_Value=36000000
 PB7.GPIO_Label=enc_s
@@ -86,9 +86,10 @@ ProjectManager.ToolChainLocation=
 SH.GPXTI0.0=GPIO_EXTI0
 NVIC.TimeBaseIP=TIM1
 PB9.GPIO_PuPd=GPIO_PULLUP
-FREERTOS.FootprintOK=false
+FREERTOS.FootprintOK=true
 PA15.Signal=GPIO_Output
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
+FREERTOS.INCLUDE_vTaskPrioritySet=1
 PB5.GPIO_Label=HV_EN
 RCC.APB1TimFreq_Value=72000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -98,7 +99,7 @@ ProjectManager.CustomerFirmwarePackage=
 PA3.Signal=USART2_RX
 PB7.GPIO_PuPd=GPIO_PULLUP
 ProjectManager.ProjectFileName=VFD_Driver.ioc
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LEDheartbeat,8,128,StartLEDheartbeat,Default,NULL,Dynamic,NULL,NULL;taskUSB_rcv,8,256,StartUSB_rcv,Default,NULL,Dynamic,NULL,NULL;SeggerRTT,8,128,StartSeggerRTT,Default,NULL,Dynamic,NULL,NULL;UARTtask,8,256,StartUARTtask,Default,NULL,Dynamic,NULL,NULL;debugRTT,8,128,StartdebugRTT,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LEDheartbeat,8,128,StartLEDheartbeat,Default,NULL,Dynamic,NULL,NULL;taskUSB_rcv,8,256,StartUSB_rcv,Default,NULL,Dynamic,NULL,NULL;UARTtask,8,256,StartUARTtask,Default,NULL,Dynamic,NULL,NULL
 PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 PB9.GPIO_Label=enc_b
@@ -149,6 +150,7 @@ MxCube.Version=6.2.0
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+FREERTOS.INCLUDE_uxTaskPriorityGet=1
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEDivPLL,HSE_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,USBPrescaler,VCOOutput2Freq_Value
