--- a/VFD_Driver.ioc
+++ b/VFD_Driver.ioc
@@ -25,23 +25,25 @@ ProjectManager.StackSize=0x400
 PB5.GPIOParameters=GPIO_Label
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
-Mcu.IP4=SYS
+Mcu.IP4=SPI2
 RCC.FCLKCortexFreq_Value=72000000
-Mcu.IP5=USART2
+Mcu.IP5=SYS
+Mcu.IP2=NVIC
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
-Mcu.IP2=RCC
-Mcu.IP3=SPI2
+Mcu.IP3=RCC
 PA15.GPIO_Label=USB_PU
 Mcu.IP0=FREERTOS
-Mcu.IP1=NVIC
+Mcu.IP1=I2C1
 PA12.Signal=USB_DP
 SPI2.CLKPolarity=SPI_POLARITY_HIGH
 Mcu.UserConstants=
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=72000000
-Mcu.IPNb=8
+Mcu.IPNb=9
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=72000000
+PB6.Signal=I2C1_SCL
+PB6.Mode=I2C
 Mcu.Pin6=PB10
 Mcu.Pin7=PB11
 Mcu.Pin8=PB12
@@ -72,6 +74,7 @@ PB14.Mode=Full_Duplex_Master
 VP_SYS_VS_tim1.Mode=TIM1
 File.Version=6
 SPI2.CalculateBaudRate=2.25 MBits/s
+PB7.Signal=I2C1_SDA
 PB8.Locked=true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 ProjectManager.HalAssertFull=false
@@ -106,7 +109,7 @@ PB8.GPIOParameters=GPIO_Label
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 PB9.GPIO_Label=enc_s
 PA15.GPIOParameters=GPIO_Label
-Mcu.PinsNb=23
+Mcu.PinsNb=25
 ProjectManager.NoMain=false
 USB_DEVICE.VirtualModeFS=Cdc_FS
 NVIC.SavedSvcallIrqHandlerGenerated=true
@@ -164,19 +167,22 @@ RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1Ti
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103C(8-B)Tx
 NVIC.SavedPendsvIrqHandlerGenerated=true
+Mcu.Pin24=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 PA2.Signal=USART2_TX
 ProjectManager.UnderRoot=true
+Mcu.IP8=USB_DEVICE
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
-Mcu.IP6=USB
-Mcu.IP7=USB_DEVICE
+Mcu.IP6=USART2
+Mcu.IP7=USB
 ProjectManager.CoupleFile=true
 NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:false\:true\:true
 RCC.SYSCLKFreq_VALUE=72000000
 PB5.Signal=GPIO_Output
-Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin23=VP_SYS_VS_tim1
 RCC.TimSysFreq_Value=72000000
-Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin21=VP_SYS_VS_tim1
+Mcu.Pin20=PB8
+Mcu.Pin21=PB9
 PA12.Mode=Device
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
@@ -185,6 +191,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 SPI2.FirstBit=SPI_FIRSTBIT_LSB
 ProjectManager.CompilerOptimize=6
 PA11.Signal=USB_DM
+PB7.Mode=I2C
 PA14.Signal=SYS_JTCK-SWCLK
 ProjectManager.HeapSize=0x200
 Mcu.Pin15=PA14
@@ -192,10 +199,10 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 Mcu.Pin16=PA15
 Mcu.Pin13=PA12
 Mcu.Pin14=PA13
-Mcu.Pin19=PB9
+Mcu.Pin19=PB7
 ProjectManager.ComputerToolchain=false
 Mcu.Pin17=PB5
-Mcu.Pin18=PB8
+Mcu.Pin18=PB6
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=PB15
 Mcu.Pin12=PA11
