packed in library

--- a/VFD_Driver.ioc
+++ b/VFD_Driver.ioc
@@ -48,7 +48,7 @@ Mcu.Pin6=PB10
 Mcu.Pin7=PB11
 Mcu.Pin8=PB12
 Mcu.Pin9=PB13
-FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configTOTAL_HEAP_SIZE,INCLUDE_vTaskPrioritySet,INCLUDE_uxTaskPriorityGet
+FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configTOTAL_HEAP_SIZE,INCLUDE_vTaskPrioritySet,INCLUDE_uxTaskPriorityGet,Mutexes01
 RCC.AHBFreq_Value=72000000
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -203,6 +203,7 @@ Mcu.Pin19=PB7
 ProjectManager.ComputerToolchain=false
 Mcu.Pin17=PB5
 Mcu.Pin18=PB6
+FREERTOS.Mutexes01=muI2C,Dynamic,NULL
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=PB15
 Mcu.Pin12=PA11
