added set time functionality

--- a/VFD_Driver.ioc
+++ b/VFD_Driver.ioc
@@ -11,7 +11,7 @@ PB10.GPIO_PuPd=GPIO_PULLUP
 SPI2.VirtualType=VM_MASTER
 RCC.PLLCLKFreq_Value=72000000
 PC13-TAMPER-RTC.GPIOParameters=PinState,GPIO_Label
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true
 PA11.Mode=Device
 RCC.ADCFreqValue=36000000
 NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -48,7 +48,7 @@ Mcu.Pin6=PB10
 Mcu.Pin7=PB11
 Mcu.Pin8=PB12
 Mcu.Pin9=PB13
-FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configTOTAL_HEAP_SIZE,INCLUDE_vTaskPrioritySet,INCLUDE_uxTaskPriorityGet,Mutexes01
+FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configTOTAL_HEAP_SIZE,INCLUDE_vTaskPrioritySet,INCLUDE_uxTaskPriorityGet,Mutexes01,INCLUDE_xQueueGetMutexHolder
 RCC.AHBFreq_Value=72000000
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -69,6 +69,7 @@ ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.4
 MxDb.Version=DB.6.0.20
 ProjectManager.BackupPrevious=true
 PC13-TAMPER-RTC.PinState=GPIO_PIN_SET
+FREERTOS.INCLUDE_xQueueGetMutexHolder=0
 PA14.Mode=Serial_Wire
 PB14.Mode=Full_Duplex_Master
 VP_SYS_VS_tim1.Mode=TIM1
@@ -94,7 +95,7 @@ FREERTOS.FootprintOK=true
 PA15.Signal=GPIO_Output
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 SPI2.CLKPhase=SPI_PHASE_2EDGE
-FREERTOS.INCLUDE_vTaskPrioritySet=1
+FREERTOS.INCLUDE_vTaskPrioritySet=0
 PB5.GPIO_Label=HV_EN
 RCC.APB1TimFreq_Value=72000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -160,7 +161,7 @@ MxCube.Version=6.2.0
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-FREERTOS.INCLUDE_uxTaskPriorityGet=1
+FREERTOS.INCLUDE_uxTaskPriorityGet=0
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEDivPLL,HSE_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,USBPrescaler,VCOOutput2Freq_Value
